--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@azure/openai": "^1.0.0-beta.11",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "framer-motion": "^6.5.1",
-    "next": "13.0.3",
-    "openai": "^3.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^14.1.0",
+    "openai": "^4.26.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "yarn": "^1.22.21"
   }
 }
