--- a/.github/workflows/main_grataitudenodejs.yml
+++ b/.github/workflows/main_grataitudenodejs.yml
@@ -26,8 +26,9 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+          
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: Compress-Archive . release.zip
         
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
